updated fixed call button to centre on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3060,6 +3060,7 @@
 			-webkit-animation: reveal-header 0.5s;
 			-ms-animation: reveal-header 0.5s;
 			animation: reveal-header 0.5s;
+			
 		}
 
 		#header.alt {
@@ -4761,38 +4762,9 @@
 	max-width: 100%!important; height: auto; overflow: hidden!important;
 }
 
-#bottomBannerContainer {
-	position: fixed;
-	bottom: 0;
-	right: 30px;
-	z-index: 10000;
-}
 
-#bottomBannerContainer ul {
-	list-style: none;
-	
-}
 
-#bottomBannerContainer ul li{
 
-}
-
-.hiddenTop {
-	opacity: 0;
-    filter: blur(5px);
-    transform: translateY(-90%);
-    transition: all 1s;
-}
-
-.button.red {
-	background-color: rgba(200, 0, 0, 0.8);
-	width: 20em;
-
-}
-
-#navPhoneNumber.button.phone {
-	background-color: rgba(200, 0, 0, 0.5);
-}
 
 #bannerTestimonials {
 	display: flex;
@@ -4822,3 +4794,188 @@
 	transition-delay: 400ms;
 }
 
+.hiddenTop {
+	opacity: 0;
+    filter: blur(5px);
+    transform: translateY(-90%);
+    transition: all 1s;
+}
+
+.phoneButton.red {
+	background-color: rgba(200, 0, 0, 0.9);
+	width: 20em;
+
+}
+
+#navPhoneNumber.button.phone {
+	background-color: rgba(200, 0, 0, 0.5);
+}
+
+.phoneButton {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	-ms-appearance: none;
+	appearance: none;
+	-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+	-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+	-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+	transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+	background-color: #666; 
+	border-radius: 6px;
+	border: 0;
+	color: #ffffff;
+	cursor: pointer; 
+	/* display: inline-block;  */
+	font-weight: 400;
+	height: 3em;
+	line-height: 3em;
+	padding: 1em 3em;
+	text-align: center;
+	text-decoration: none;
+	white-space: nowrap;
+}
+
+	input[type="submit"]:hover,
+	input[type="reset"]:hover,
+	input[type="button"]:hover,
+	.phoneButton:hover {
+		background-color: #737373;
+	}
+
+	input[type="submit"]:active,
+	input[type="reset"]:active,
+	input[type="button"]:active,
+	.phoneButton:active {
+		background-color: #595959;
+	}
+
+	#bottomBannerContainer {
+		position: fixed;
+		bottom: 1em;
+		right: 3em;
+		z-index: 10000;
+	}
+	
+	@media screen and (max-width: 800px) {
+		#bottomBannerContainer {
+			position: fixed;
+			left: 50%;
+			transform: translateX(-50%);
+			/* width: 15em; */
+			z-index: 10000;
+			margin: 0 auto;
+			text-align: center;
+			overflow: hidden;
+		}
+	
+		#bottomBannerContainer a {
+			margin: 0 auto;
+			width: 100% !important;
+			font-size: small;
+		}
+	}
+
+	@media screen and (max-width: 512px) {
+		#bottomBannerContainer {
+			display: none;
+		}
+	
+		#bottomBannerContainer a {
+			display: none;
+		}
+	}
+
+	#bottomBannerContainer512 {
+		position: fixed;
+		bottom: 1em;
+		right: 3em;
+		z-index: 10000;
+	}
+
+	#bottomBannerContainer512 {
+		position: fixed;
+		left: 50%;
+		transform: translateX(-50%);
+		/* width: 15em; */
+		z-index: 10000;
+		margin: 0 auto;
+		text-align: center;
+		overflow: hidden;
+	}
+	
+	#bottomBannerContainer512 a {
+		margin: 0 auto;
+		width: 100% !important;
+		font-size: large;
+	}
+
+	@media screen and (min-width: 513px) {
+
+		#bottomBannerContainer512 {
+			display: none;
+
+			
+		}
+
+	}
+
+	@media screen and (max-width: 512px) {
+
+		.phoneButton {
+			-moz-appearance: none;
+			-webkit-appearance: none;
+			-ms-appearance: none;
+			appearance: none;
+			-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+			-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+			-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+			transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+			background-color: #666; 
+			border-radius: 6px;
+			border: 0;
+			color: #ffffff;
+			cursor: pointer; 
+			/* display: inline-block;  */
+			font-weight: 400;
+			height: 3em;
+			line-height: 3em;
+			padding: 1em 23%;
+			text-align: center;
+			text-decoration: none;
+			white-space: nowrap;
+		}
+
+	}
+
+	@media screen and (max-width: 361px) {
+
+		#bottomBannerContainer512 a {
+			margin: 0 auto;
+			width: 100% !important;
+			font-size: small;
+		}
+
+		.phoneButton {
+			-moz-appearance: none;
+			-webkit-appearance: none;
+			-ms-appearance: none;
+			appearance: none;
+			-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+			-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+			-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+			transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+			background-color: #666; 
+			border-radius: 6px;
+			border: 0;
+			color: #ffffff;
+			cursor: pointer; 
+			/* display: inline-block;  */
+			font-weight: 400;
+			height: 3em;
+			line-height: 3em;
+			padding: 1em 20%;
+			text-align: center;
+			text-decoration: none;
+			white-space: nowrap;
+		}
+	}	
